--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="layer">
                         <h3>Typing Speed Test</h3>
                         <p>You can check your Typing speed and Accuracy by giving a small Test</p>
-                            <a href="typing speed/index.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="typing speed/speed.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
