--- a/typing/speed.html
+++ b/typing/speed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing speed</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <script src="https://kit.fontawesome.com/b522c9997b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -25,6 +25,21 @@
         <button id="start-test" onclick="startTest()">Start</button>
         <button id="stop-test" onclick="displayResult()">Stop</button>
     </div>
+    <img id="imge" src="Typing_image/comment.png" alt="">
+    <div class="inst">
+        <h3>Instruction:-</h3>
+        <ol style="list-style-type: square;">
+            <li>Click the "Start" button when you're ready to begin.</li>
+            <li>Focus on the text box below and start typing the passage as accurately and quickly as possible.</li>
+            <li>The timer will automatically start and show your elapsed time.</li>
+            <li>Once you finish typing the entire passage, the test will stop</li>
+            <br>
+            <li>After finishing the test, you'll see your typing speed in Words Per Minute (WPM) and Accuracy is displayed here.</li>
+            <br>
+            <li>Ready to challenge yourself again? Refresh this page to try another passage!</li>
+        </ol>
+    </div>
+    
     <script src="script.js"></script>
    
 </body>
