--- a/typing/speed.html
+++ b/typing/speed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing speed</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/b522c9997b.js" crossorigin="anonymous"></script>
 </head>
 <body>
