--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>I'm <span>Prince kumar</span>, a fervent engineer passionate about leveraging technoloy to dive innovation. Currently pursuing my underdraduate degree from NIT Rourkela.
-                        Working as a frontend web developer proficient in C++ and JavaScript. While crafting engaging user experiences is my forte, I'm also venturing into backend development
-                        my passion extends to exploring the intricate world of App development and Ethical hacking. <br> <br>Beyond coding, I am passionate about sports and fascinated by the 
-                        science behind technology. Consistently exploring defense news keeps me updated on tech-related developments, while my keen interest in geopolitics and wars fuels my 
-                        curiosity about global dynamics. This multifaceted approach enhances my understanding of the intricate connections between technology, science, and world affairs  </p>
+                    <p>I'm <span>Prince kumar</span>, a fervent engineer passionate about leveraging technology to dive innovation. 
+                        Currently pursuing my undergraduate degree from NIT Rourkela. Working as a frontend web developer proficient
+                         in C++ and JavaScript. While crafting engaging user experiences is my forte, I'm also venturing into backend 
+                         development my passion extends to exploring the intricate world of App development and Ethical hacking.
+                        <br> <br> Beyond coding, I am passionate about sports and fascinated by the science behind technology. 
+                        Consistently exploring defense news keeps me updated on tech-related developments, while my keen interest 
+                        in geopolitics and wars fuels my curiosity about global dynamics. This multifaceted approach enhances
+                         my understanding of the intricate connections between technology, science, and world affairs...
+                         </p>
 
                             <div class="tab-titles">
                                 <p class="tab-links active-links" onclick="opentab('skills')">Skills</p>
@@ -131,7 +135,7 @@
                     <div class="layer">
                         <h3>Typing Speed Test</h3>
                         <p>You can check your Typing speed and Accuracy by giving a small Test</p>
-                            <a href="typing/speed.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="typing/speed.html"><i class="fa-solid -arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -181,7 +185,6 @@
             <p>Develop with <i class="fa-solid fa-heart"></i> by Prince</p>
         </div>
     </div>
-
     <!-- --------------------end of contect section with footer---------------- -->
 
     <script>
