--- a/typing/speed.html
+++ b/typing/speed.html
@@ -29,7 +29,7 @@
     <div class="inst">
         <h3>Instruction:-</h3>
         <ol style="list-style-type: square;">
-            <li>Click the "Start" button when you're ready to begin.</li>
+            <li>Click the <span style="color: red;">"Start"</span> button <span style="color: red;">To activate the Text Area</span></li>
             <li>Focus on the text box below and start typing the passage as accurately and quickly as possible.</li>
             <li>The timer will automatically start and show your elapsed time.</li>
             <li>Once you finish typing the entire passage, the test will stop</li>
