--- a/index.html
+++ b/index.html
@@ -118,32 +118,33 @@
     </div> -->
 <!-- -----------------------works--------------- -->
 
-    <div id="portfolio">
+ <div id="portfolio">
         <div class="container">
             <h1 class="sub-title"> My work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/currency.png" >
+                    <img src="https://i.pinimg.com/474x/c0/c8/ed/c0c8ed6673a36cf7e1661d4a10b610b7.jpg" >
                     <div class="layer">
                         <h3>Currency Converter</h3>
                         <p>It calculate the value of any currency compared to other's country currency</p>
-                            <a href="currency/currency.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://exchangebuddy.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/typing.png" >
+                    <img src="https://static.vecteezy.com/system/resources/previews/005/239/763/large_2x/clipboard-with-to-do-list-claim-form-on-it-paper-sheets-check-marks-tick-ok-and-cross-x-checkbox-on-the-list-red-pen-isolated-on-light-blue-background-flat-style-illustration-vector.jpg" >
                     <div class="layer">
-                        <h3>Typing Speed Test</h3>
-                        <p>You can check your Typing speed and Accuracy by giving a small Test</p>
-                            <a href="typing/speed.html"><i class="fa-solid -arrow-up-right-from-square"></i></a>
+                        <h3>Todo-App</h3>
+                        <p>It Helps in to plan your way and Tick it</p>
+                            <a href="https://taskdoist.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
+                
                 <div class="work">
-                    <img src="images/work-3.png" >
+                    <img src="https://i.pinimg.com/474x/21/2d/aa/212daadb797930f7a5d139d2f5c76efb.jpg" >
                     <div class="layer">
-                        <h3>Name of project</h3>
-                        <p>Discription of project in detail.</p>
-                            <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Random Password Generator</h3>
+                        <p>You able to generate the password according to your choice</p>
+                            <a href="https://passwordmingle.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
             </div>
