--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/474x/ef/0e/46/ef0e46f569309ce7b740f63f5cf40fd4.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prince kumar</title>
      <link rel="stylesheet" href="style.css">
@@ -56,7 +57,8 @@
                             <div class="tab-contents active-tabs" id="skills">
                                 <ul>
                                     <li><span>Programming Language</span><br>C++, HTML, CSS, javaScript</li>
-                                    <li><span>Industry Knowledge</span><br>Data structure ans algorthm, OOPS,<br>
+                                    <li><span>Frameworks</span><br>React, Node, Tailwind</li>
+                                    <li><span>Industry Knowledge</span><br>Data Structure ans Algorithm, OOPS,<br>
                                     Database Management System</li>
                                     <li><span>Other Softwares</span><br>SolidWorks, Autocad, Ansys</li>
                                     <li><span>Languages</span><br>Hindi, English</li>
@@ -64,7 +66,14 @@
                             </div>
                             <div class="tab-contents" id="education">
                                 <ul>
-                                    <li><span>NIT Rourkela</span><br> Bachelor of Technology in Ceramic Engineering <br> 2021-2025 <br> CGPA: 7.20</li>
+                                    <li><span>NIT Rourkela</span><br> Bachelor of Technology in Ceramic Engineering <br> 2021-2025 <br> CGPA: 7.17</li>
+                                    <li><span>St. Xavier's Public School</span><br>Intermediate <br>2020 <br>Percentage: 81%</li>
+                                    <li><span>St. Xavier's Public School</span><br>Matriculation <br>2018 <br>Percentage: 82.2% </li>
+                                </ul>
+                            </div>
+                            <div class="tab-contents" id="projects">
+                                <ul>
+                                   <li><span>NIT Rourkela</span><br> Bachelor of Technology in Ceramic Engineering <br> 2021-2025 <br> CGPA: 7.17</li>
                                     <li><span>St. Xavier's Public School</span><br>Intermediate <br>2020 <br>Percentage: 81%</li>
                                     <li><span>St. Xavier's Public School</span><br>Matriculation <br>2018 <br>Percentage: 82.2% </li>
                                 </ul>
@@ -72,13 +81,12 @@
                             <div class="tab-contents" id="projects">
                                 <ul>
                                     <li><span>Currency Converter</span><br>
-                                        I've crafted a sleek currency converter using HTML, CSS, and JavaScript, 
+                                        I've crafted a sleek currency converter using HTML, CSS, JavaScript and React 
                                         with real-time exchange rates pulled through APIs, providing users with an 
                                         efficient and up-to-date financial tool. Its intuitive design ensures a
                                          seamless and user-friendly experience </li>
-                                    <li><span>Typing speed game</span><br>I have design a simple typing speed test which gives
-                                    your typing speed and Accuracy by typing some random quotes</li>
-                                    <li><span>new Project</span><br>Project discription...</li>
+                                    <li><span>To-Do App</span><br>A To-do application built with React that allows users to add, edit, delete, and toggle the completion status of tasks. It features a clean user interface, persistent state using local storage, and responsive design for seamless task management across sessions. </li>
+                                    <li><span>Random Password Generator</span><br>A Random Password Generator application built with React features a user-friendly interface allowing users to generate passwords of variable lengths. It includes options to include numbers and special characters, as well as a copy functionality for easy password management. The application uses React state management to dynamically update the password based on user input.</li>
                                 </ul>
                             </div>
                 </div>
