--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <p> <i class="fa-solid fa-phone"></i> +918709382225</p>
                     <div class="social-icon">
                         <a href="https://www.facebook.com/princekumar.prince.370/"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/prince_sharma_1204/"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/sprince1204"><i class="fa-brands fa-square-github"></i></a>
                         <a href="https://twitter.com/Sprince120403"><i class="fa-brands fa-x-twitter"></i></a>
                         <a href="https://www.linkedin.com/in/prince-kumar-5a8b71241/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://leetcode.com/sprince12/"><img src="images/leetcode1.png" class="leet"></a>
