--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <ul>
                                     <li><span>Programming Language</span><br>C++, HTML, CSS, javaScript</li>
                                     <li><span>Frameworks</span><br>React, Node, Tailwind</li>
-                                    <li><span>Industry Knowledge</span><br>Data Structure ans Algorithm, OOPS,<br>
+                                    <li><span>Industry Knowledge</span><br>Data Structure and Algorithm, OOPS,<br>
                                     Database Management System</li>
                                     <li><span>Other Softwares</span><br>SolidWorks, Autocad, Ansys</li>
                                     <li><span>Languages</span><br>Hindi, English</li>
@@ -160,7 +160,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p> <i class="fa-brands fa-telegram"></i> sprincekumar1204@gmail.com</p>
+                    <p><i class="fa-regular fa-envelope"></i> <a class="mail" href="https://mail.google.com/mail/u/0/?fs=1&to=princesharma12042001@gmail.com&su=&body=&tf=cm">sprincekumar1204@gmail.com</a></p>
                     <p> <i class="fa-solid fa-phone"></i> +918709382225</p>
                     <div class="social-icon">
                         <a href="https://www.facebook.com/princekumar.prince.370/"><i class="fa-brands fa-facebook-f"></i></a>
