--- a/index.html
+++ b/index.html
@@ -123,6 +123,14 @@
         <div class="container">
             <h1 class="sub-title"> My work</h1>
             <div class="work-list">
+                div class="work">
+                    <img src="https://i.pinimg.com/originals/39/1d/16/391d16ccc66f7e46e5247789b1ee1ed4.jpg" >
+                    <div class="layer">
+                        <h3>Social-Posting</h3>
+                        <p>A Full‐featured blog application enabling user to register, authenticate, and manage their blog posts seamlessly</p>
+                            <a href="https://social-posting.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    </div>
+                </div>
                 <div class="work">
                     <img src="https://i.pinimg.com/474x/c0/c8/ed/c0c8ed6673a36cf7e1661d4a10b610b7.jpg" >
                     <div class="layer">
@@ -169,7 +177,7 @@
                         <a href="https://www.linkedin.com/in/prince-kumar-5a8b71241/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://leetcode.com/sprince12/"><img src="images/leetcode1.png" class="leet"></a>
                     </div>
-                    <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="https://drive.google.com/file/d/1wepuNOr6WL7xra3M9cy_ePKU-TK7f_-8/view?usp=sharing" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
