--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="container">
             <h1 class="sub-title"> My work</h1>
             <div class="work-list">
-                div class="work">
+                <div class="work">
                     <img src="https://i.pinimg.com/originals/39/1d/16/391d16ccc66f7e46e5247789b1ee1ed4.jpg" >
                     <div class="layer">
                         <h3>Social-Posting</h3>
