--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="layer">
                         <h3>Social-Posting</h3>
                         <p>A Full‐featured blog application enabling user to register, authenticate, and manage their blog posts seamlessly</p>
-                            <a href="https://social-posting.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://sblog-app.netlify.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
